--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=0.85">
       <link rel="stylesheet" href="/dist/assets/css/landing.css"/>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/>
+      <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.min.css"/>
+      <link rel="stylesheet" href="/vendor/pretty-checkbox/pretty-checkbox.min.css"/>
       <script type="text/javascript"> //<![CDATA[ 
         var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
         document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
@@ -45,5 +45,6 @@
       <div class="progress-bar-live" id="progress-bar-live"></div>
       <script type="text/javascript" src="/dist/assets/js/landing.js"></script>
       <script type="text/javascript" src="/dist/bundle.js"></script>
+      <script src="http://platform-api.sharethis.com/js/sharethis.js#property=5b0befdd461c950011909a12&product=inline-share-buttons"></script>
    </body>
 </html>
