Added share widget

--- a/index.html
+++ b/index.html
@@ -45,5 +45,23 @@
       <div class="progress-bar-live" id="progress-bar-live"></div>
       <script type="text/javascript" src="/dist/assets/js/landing.js"></script>
       <script type="text/javascript" src="/dist/bundle.js"></script>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId            : '1802247233142037',
+            autoLogAppEvents : true,
+            xfbml            : true,
+            version          : 'v3.0'
+          });
+        };
+      
+        (function(d, s, id){
+           var js, fjs = d.getElementsByTagName(s)[0];
+           if (d.getElementById(id)) {return;}
+           js = d.createElement(s); js.id = id;
+           js.src = "https://connect.facebook.net/en_US/sdk.js";
+           fjs.parentNode.insertBefore(js, fjs);
+         }(document, 'script', 'facebook-jssdk'));
+      </script>
   </body>
 </html>
