--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <link rel="stylesheet" href="/dist/assets/css/landing.css"/>
       <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.min.css"/>
       <link rel="stylesheet" href="/vendor/pretty-checkbox/pretty-checkbox.min.css"/>
-      <script type="text/javascript"> //<![CDATA[ 
+      <!-- <script type="text/javascript"> //<![CDATA[ 
         var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
         document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
         //]]>
-        </script>
+        </script> -->
    </head>
    <body>
       <div id="root"></div>
